Fixed Navbar Overlap

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -3865,6 +3865,11 @@ textarea.form-control-lg {
   border-top-right-radius: 0;
 }
 
+.hero {
+  padding-top: 22vh; /* Default navbar height */
+}
+
+
 .nav {
   --bs-nav-link-padding-x: 1rem;
   --bs-nav-link-padding-y: 0.5rem;
